--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
       filters:[
         {name : devicename}
       ],
-      services: ['battery_service']
+      services: ['battery_service'],
+      optionalServices: ["battery_service"]
     }
 
 
