--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
 
       <div class="col-2">
-        <button type="button" id="controlButton" class="btn btn-primary">Connect</button>
+        <button type="button" id="controlButton" class="btn btn-primary">HBConnect</button>
       </div>
   </div>
 
