--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
       acceptAllDevices: false,
       optionalServices: [0x180d, 0x180f]    
     };
-// SEE https://dev.to/manufac/interacting-with-polar-verity-sense-using-web-bluetooth-553a for event tracking
+// SEE  for event tracking
+    //https://dev.to/manufac/interacting-with-polar-verity-sense-using-web-bluetooth-553a
 
 //------------New options to try
 // Discovery options match any devices advertising:
