--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ async function BLEManager() {
 
 async function post_Data()
 {
-    var URL="https://script.google.com/macros/s/AKfycbxIgM1s4y49a99jk9uW7rwYVd0A7QPg5b5WlU97CEzkbD2jhaB-CYYAbsDRWTXNque-JQ/exec?callback=loadData;
+    var URL="https://script.google.com/macros/s/AKfycbxIgM1s4y49a99jk9uW7rwYVd0A7QPg5b5WlU97CEzkbD2jhaB-CYYAbsDRWTXNque-JQ/exec?callback=loadData";
     var DATA="{"abc":"def"};
     const response= await fetch(URL, {
         method: "GET",
