--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button type="button" id="controlButton" class="btn btn-primary">HBConnect</button>
       </div>
       <div class="col-2">
-        <button onclick="post_Data()" type="button" id="gsheets" class="btn btn-primary">GSheets</button>
+        <button onclick="post()" type="button" id="gsheets" class="btn btn-primary">GSheets</button>
       </div>  </div>
 
   <div class="row">
@@ -191,7 +191,7 @@ async function BLEManager() {
  // });
 
 }
-*/
+
 
 async function post_Data()
 {
@@ -210,7 +210,21 @@ function loadData(e)
     console.log(" inside loadData ");
     console.log(e);
   }
-   
+   */
+
+var url = "https://script.google.com/macros/s/AKfycby4TGeapO18hGTOPpyFFdrLqIm2zi3n5bKgoRoBZBNcAd9Tf1ptShvUH_j87jkU0jilRA/exec" ;
+  
+function post() {
+  const obj = { key: "value" };
+  fetch(url, { method: "POST", body: JSON.stringify(obj) })
+    .then((res) => {
+      console.log(res.status);
+      return res.text();
+    })
+    .then((res) => console.log(res));
+}
+
+     
    </script> 
 </body>
 </html>
