--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button type="button" id="controlButton" class="btn btn-primary">HBConnect</button>
       </div>
       <div class="col-2">
-        <button onclick="post()" type="button" id="gsheets" class="btn btn-primary">GSheets 2.0</button>
+        <button onclick="post()" type="button" id="gsheets" class="btn btn-primary">G3.0 Sheets</button>
       </div>  </div>
 
   <div class="row">
@@ -212,7 +212,7 @@ function loadData(e)
   }
    */
 
-var url = "https://script.google.com/macros/s/AKfycbxu-BRqDCdPMikAgCCnwEb9Rpph8KxqnLu4TqXT72a8FhOPz7nijUXm9IM6rY3ZOkolCA/exec";
+var url = "https://script.googleusercontent.com/macros/echo?user_content_key=VMU0NWdn1SYFttZyj-FC-bh3se2qNZBEeXxWMm7jzlOJ8OOIhyOcEv8p9itQq7ODslehIC1t7lrUqMB_G-ZeWo0afahrhX9Vm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnBwL7Nlgz5VazDSty0qinBq9t1f2a9NFEcuiKgf61VuuSry_DCWnT-TTlmdABzDRl2Xgg2NLp48D-9CGXSImazyKxvhweMcIPNz9Jw9Md8uu&lib=Mj6uLnfqDYAI1j-Tdx8OyA1r6yPOvyRmm";
   
 function post() {
    var elem=document.createElement("script");
