--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button type="button" id="controlButton" class="btn btn-primary">HBConnect</button>
       </div>
       <div class="col-2">
-        <button onclick="post()" type="button" id="gsheets" class="btn btn-primary">G3.0 Sheets</button>
+        <button onclick="post()" type="button" id="gsheets" class="btn btn-primary">5.0Sheets</button>
       </div>  </div>
 
   <div class="row">
@@ -212,7 +212,7 @@ function loadData(e)
   }
    */
 
-var url = "https://script.googleusercontent.com/macros/echo?user_content_key=VMU0NWdn1SYFttZyj-FC-bh3se2qNZBEeXxWMm7jzlOJ8OOIhyOcEv8p9itQq7ODslehIC1t7lrUqMB_G-ZeWo0afahrhX9Vm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnBwL7Nlgz5VazDSty0qinBq9t1f2a9NFEcuiKgf61VuuSry_DCWnT-TTlmdABzDRl2Xgg2NLp48D-9CGXSImazyKxvhweMcIPNz9Jw9Md8uu&lib=Mj6uLnfqDYAI1j-Tdx8OyA1r6yPOvyRmm";
+var url = "https://script.google.com/macros/s/AKfycbwcJAVLpjGpUgDbEldgZ7kkhCef-tMtdgzrDe3-N1PLi-epPFbiitw5h_eLcSB32TkcIQ/exec" ;
   
 function post() {
    var elem=document.createElement("script");
@@ -220,13 +220,7 @@ function post() {
    document.getElementsByTagName("body")[0].appendChild(elem);
    return;
   
-  const obj = { key: "value" };
-  fetch(url, { method: "POST", body: JSON.stringify(obj) })
-    .then((res) => {
-      console.log(res.status);
-      return res.text();
-    })
-    .then((res) => console.log(res));
+  
 } //post()
 
      
