--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button type="button" id="controlButton" class="btn btn-primary">HBConnect</button>
       </div>
       <div class="col-2">
-        <button onclick="post()" type="button" id="gsheets" class="btn btn-primary">77157Sheets</button>
+        <button onclick="post()" type="button" id="gsheets" class="btn btn-primary">BBBSheets</button>
       </div>  </div>
 
   <div class="row">
@@ -213,7 +213,8 @@ function loadData(e)
    */
 
 //  reqfunct == "sheetasjson"
-var url = "https://script.google.com/macros/s/AKfycbykmOFXjhVDtHPp0aOoULi498d_4_L-oPpWiTozlt-6H1mNusGcD4rwZvifFVgb7yU95A/exec" ;
+var url = "https://script.google.com/macros/s/AKfycbzsOKzURm1KoMDkl1GT4QrUqaypZaT-1wD_QwTwxmR-1ETzqoVB9eWe8dxGWBcM7V4RMg/exec" ;
+
 function post() {
    var elem=document.createElement("script");
    elem.src=url + "?reqfunct=sheetasjson" ;
