--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button type="button" id="controlButton" class="btn btn-primary">HBConnect</button>
       </div>
       <div class="col-2">
-        <button onclick="post()" type="button" id="gsheets" class="btn btn-primary">BBBSheets</button>
+        <button onclick="post()" type="button" id="gsheets" class="btn btn-primary">CCCSheets</button>
       </div>  </div>
 
   <div class="row">
@@ -217,7 +217,7 @@ var url = "https://script.google.com/macros/s/AKfycbzsOKzURm1KoMDkl1GT4QrUqaypZa
 
 function post() {
    var elem=document.createElement("script");
-   elem.src=url + "?reqfunct=sheetasjson" ;
+   elem.src=url + "?reqfunct=sheetasjsonxxxx" ;
    document.getElementsByTagName("body")[0].appendChild(elem);
    return;
   
