--- a/webserialdemo.html
+++ b/webserialdemo.html
@@ -23,7 +23,7 @@
  
 <div class="container text-center"  >
             <br/>
-            <h2>A Journey with Web Serial Simulator Demo </h2>
+            <h2>A Journey with Web Serial Simulator Demo v1.0 </h2>
             <h5>Connect your browser directly to a serial device</h5>
 
 <table border="1"  style="width:65%;background-color:aliceblue;margin-top:20px;"  >
