--- a/pencilpics.html
+++ b/pencilpics.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
     <head>
+        <meta property="og:title" content="Sketch 'Em Pics" />
+        <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+        <meta property="og:description" content="Create a Sketch of any of your images" />
+        <meta property="og:image" content="https://colinreb.github.io/gucchicolor.jpeg" />
         <style id="animation">
             body {
                 background-color: #000;
