--- a/pencilpics.html
+++ b/pencilpics.html
@@ -3,8 +3,8 @@
     <head>
         <meta property="og:title" content="Sketch 'Em Pics" />
         <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-        <meta property="og:description" content="Create a Sketch of any of your images" />
-        <meta property="og:image" content="https://colinreb.github.io/gucchicolor.jpeg" />
+        <meta property="og:description" content="An app to create a sketch of any of your images" />
+        <meta property="og:image" content="https://colinreb.github.io/gucchimeta.png" />
         <style id="animation">
             body {
                 background-color: #000;
