--- a/Christmas2023/index2.html
+++ b/Christmas2023/index2.html
@@ -115,6 +115,7 @@
              <button id="startbtn" style="padding:10px; border-radius:10px;;background-color:purple;color:white;width:30%;font-size:20px;" 
                      onclick="startcard();"> START </button>
            <span id="s1" style="color:purple;display:none;font-size:16px"><i>Have fun, St. Peter's SOC team.🎄⛄</i> </span>
+           <img src='5.png' />
            
          </div>
     </div>   
